fix layout shifting

--- a/src/index.css
+++ b/src/index.css
@@ -152,6 +152,7 @@
   }
   html {
     font-family: "Inter", sans-serif;
+    width: 100%;
   }
   body {
     @apply bg-background text-foreground;
@@ -165,4 +166,8 @@
 }
 .table-data {
   @apply text-foreground text-sm font-normal font-inter leading-normal tracking-normal;
+}
+.main-content {
+  position: relative;
+  left: calc((100vw - 100%) / 2);
 }
